fixed the footer of policy

--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
     <small class="message">Thanks for visiting and happy coding!</small>
     <small class="copyright">&copy; Copyright <span id="current-year"></span>. All rights reserved.</small>
     <div style="margin-top: 15px;">
-      <a href="privacy-policy.html" style="color: var(--text-secondary); text-decoration: none; font-size: 14px; margin: 0 10px;">Privacy Policy</a>
+      <a href="privacy-policy.html" style="color: var(--text-secondary); text-decoration: none; font-size: 14px; margin: 0 10px;">Tabeer app policy</a>
       <span style="color: var(--text-secondary); font-size: 14px;">|</span>
       <a href="#contact" style="color: var(--text-secondary); text-decoration: none; font-size: 14px; margin: 0 10px;">Contact</a>
     </div>
