--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -322,9 +322,9 @@
                 <div class="contact-info">
                     <h3>Contact Information</h3>
                     <p><strong>App Owner/Developer:</strong> Umair Anwari</p>
-                    <p><strong>Email:</strong> support@yourdomain.com</p>
+                    <p><strong>Email:</strong> umair.anwari789@gmail.com</p>
                     <p><strong>Website:</strong> https://umairanwari.vercel.app/</p>
-                    <p><strong>Privacy Policy URL:</strong> https://umairanwari.vercel.app/privacy-policy</p>
+                    <p><strong>Privacy Policy URL:</strong> https://umairanwari.vercel.app/privacy-policy.html</p>
                 </div>
                 
                 <p>We will respond to your privacy concerns within a reasonable timeframe and address any issues you may have regarding your information and our privacy practices.</p>
